# dicom-nifti-converter

./: LICENSE  README.md  analyze.py  convert.py  convert_dicom2nifti.py  pyproject.toml  requirements.txt  utils.py  validate.py  validate_nifti_dataset.py
.github/workflows/: publish.yml
docs/: dicom-to-nifti-guide.md
naming/: __init__.py  base.py  flat.py  map_strategy.py  mirror.py
src/: frontPropagation.cpp
src/dicom_nifti_converter/: analyze.py  convert.py  utils.py  validate.py
src/dicom_nifti_converter/naming/: __init__.py  base.py  flat.py  map_strategy.py  mirror.py
